Whoops!  All of spring 2016S committed in one swell foop.

--- a/resources/stylesheet.css
+++ b/resources/stylesheet.css
@@ -446,6 +446,14 @@ SPAN.overview {
   display: block;
 }
 
+/**
+ * The title of a day (in the schedule).
+ */
+SPAN.daytitle {
+  display: block;
+  font-weight: bold;
+}
+
 /*
  * Override some of the Docbook decisions
  */
